cmake_minimum_required(VERSION 3.20)
project(450_DSA_Cracker)

set(CMAKE_CXX_STANDARD 14)

add_executable(450_DSA_Cracker main.cpp Linked_List/_0_Reverse_Linked_List.cpp Linked_List/_1_Reverse_Linked_List_In_Group_Of_Given_Sizes.cpp Array/_5_Union_And_Intersection.cpp Array/_4_Move_All_Negative_To_One_Side.cpp Array/_3_Sort_Array_Of_012.cpp Array/ZZZ_Utils.cpp Array/ZZZ_Utils.h Array/_0_Reverse_The_Array.cpp Array/_1_Find_Max_And_Min.cpp Array/_2_Find_Kth_Max_And_Min.cpp)
